Fix problem with first transcript case 1 evidence cutting off on mobile

--- a/css/design.css
+++ b/css/design.css
@@ -560,7 +560,7 @@ footer {
     transition: opacity 1s;
 }
 
-#script-1:has(#script-tog-1:checked), #script-2:has(#script-tog-2:checked), #script-3:has(#script-tog-3:checked), #script-4:has(#script-tog-4:checked), #script-5:has(#script-tog-5:checked), #script-6:has(#script-tog-6:checked), #script-7:has(#script-tog-7:checked), #script-8:has(#script-tog-8:checked), #script-9:has(#script-tog-9:checked), #script-10:has(#script-tog-10:checked), #script-11:has(#script-tog-11:checked), #script-12:has(#script-tog-12:checked), #script-13:has(#script-tog-13:checked), #script-14:has(#script-tog-14:checked), #script-15:has(#script-tog-15:checked) {
+#script-2:has(#script-tog-2:checked), #script-3:has(#script-tog-3:checked), #script-4:has(#script-tog-4:checked), #script-5:has(#script-tog-5:checked), #script-6:has(#script-tog-6:checked), #script-7:has(#script-tog-7:checked), #script-8:has(#script-tog-8:checked), #script-9:has(#script-tog-9:checked), #script-10:has(#script-tog-10:checked), #script-11:has(#script-tog-11:checked), #script-12:has(#script-tog-12:checked), #script-13:has(#script-tog-13:checked), #script-14:has(#script-tog-14:checked), #script-15:has(#script-tog-15:checked) {
     height: 60em;
 }
 
@@ -575,6 +575,14 @@ footer {
 
 #script-tog-6:checked ~ .script-text-6, #script-tog-7:checked ~ .script-text-7, #script-tog-8:checked ~ .script-text-8, #script-tog-14:checked ~ .script-text-14 {
     height: 79em;
+}
+
+#script-1:has(#script-tog-1:checked) {
+    height: 70em;
+}
+
+#script-tog-1:checked ~ .script-text-1 {
+    height: 69em
 }
 
 /*Animations added */
